--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 </head>
 <body>
     <h1>Local AI File System Controller</h1>
-    <p>A local-first system that allows users to control their file system using natural language commands via a command line interface (CLI). It works completely offline using a large language model (LLM) and a modular tool execution server.</p>
+    <p>The Local AI File System Controller that allows users to control their file system using natural language commands via a command line interface (CLI). It works completely offline using a large language model (LLM) and a modular tool execution server.</p>
 
     <div class="divider"></div>
 
